gccida/c0/hash_scan_set
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hash_scan_set/src/gcse.c:2645:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)pat[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hash_scan_set/src/gcse.c:2705:16: error: expected expression
if ( operator+=<char [3], QByteArray>( src, insn) ) 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hash_scan_set/src/gcse.c:2705:6: error: use of undeclared identifier 'operator'
if ( operator+=<char [3], QByteArray>( src, insn) ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hash_scan_set/src/gcse.c:2705:17: error: expected expression
if ( operator+=<char [3], QByteArray>( src, insn) ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hash_scan_set/src/gcse.c:2710:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( rtx)insn[2]; 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hash_scan_set/src/gcse.c:2724:30: error: use of undeclared identifier 'machine_mode'
insert_expr_in_table( src, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest), insn, v6, v3 & 1); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hash_scan_set/src/gcse.c:2724:45: error: expected expression
insert_expr_in_table( src, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest), insn, v6, v3 & 1); 
                                            ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hash_scan_set/src/obj/gcse.o] Error 1
